--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -745,6 +745,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
 					<systemProperties>
 						<property>
 							<name>java.util.logging.config.file</name>
