--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -475,13 +475,13 @@
 						<detectOfflineLinks>false</detectOfflineLinks>
 						<doclint>${javadoc.doclint}</doclint>
 						<notimestamp>true</notimestamp>
-						<!-- resourcesArtifacts>
+						<resourcesArtifacts>
 							<resourcesArtifact>
 								<groupId>org.evolvis.tartools.maven-parent</groupId>
 								<artifactId>jdx</artifactId>
 								<version>${org.evolvis.tartools.maven-parent.jdx}</version>
 							</resourcesArtifact>
-						</resourcesArtifacts -->
+						</resourcesArtifacts>
 						<source>${javaRelease}</source>
 					</configuration>
 				</plugin>
