--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -54,7 +54,6 @@
 		<build.timestamp>${maven.build.timestamp}</build.timestamp>
 		<maven.compiler.source>${javaRelease}</maven.compiler.source>
 		<maven.compiler.target>${javaRelease}</maven.compiler.target>
-		<maven.compiler.release>${javaRelease}</maven.compiler.release>
 		<releaseVersion>${project.version}</releaseVersion>
 		<!-- dependency management for the “tests” classifier and library JARs we provide -->
 		<org.evolvis.tartools.maven-parent.version>3.1-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
@@ -176,6 +175,27 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>jdk8orolder</id>
+			<!-- only tested with JDK 8 -->
+			<activation>
+				<jdk>(,9)</jdk>
+			</activation>
+			<properties>
+				<!-- ‣ maven plugins -->
+				<!-- ‣ dependency management -->
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk9ornewer</id>
+			<!-- only tested with JDK 11, 17 and 21 -->
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<properties>
+				<maven.compiler.release>${javaRelease}</maven.compiler.release>
+			</properties>
 		</profile>
 		<profile>
 			<id>jdk12ornewer</id>
