move project.build.outputTimestamp to parent POM -Pbuild-mvnparent

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -116,6 +116,8 @@
 			<properties>
 				<archiver.copyright.firstyear>2016</archiver.copyright.firstyear>
 				<archiver.copyright.lastyear>2024</archiver.copyright.lastyear>
+				<!-- ‣ release management -->
+				<project.build.outputTimestamp>2024-05-03T19:43:06Z</project.build.outputTimestamp>
 			</properties>
 		</profile>
 		<profile>
