--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -806,7 +806,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+					<argLine>${argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
 					<systemProperties>
 						<property>
 							<name>java.util.logging.config.file</name>
