--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.evolvis.tartools.maven-parent</groupId>
 	<artifactId>pom</artifactId>
-	<version>3.1-SNAPSHOT</version>
+	<version>3.1</version>
 	<packaging>pom</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Parent POM for Maven projects — Parent POM</description>
@@ -56,7 +56,7 @@
 		<maven.compiler.target>${javaRelease}</maven.compiler.target>
 		<releaseVersion>${project.version}</releaseVersion>
 		<!-- ‣ dependency management for the “tests” classifier and library JARs we provide -->
-		<org.evolvis.tartools.maven-parent.version>3.1-SNAPSHOT</org.evolvis.tartools.maven-parent.version>
+		<org.evolvis.tartools.maven-parent.version>3.1</org.evolvis.tartools.maven-parent.version>
 		<org.evolvis.tartools.maven-parent.jdx>1.1</org.evolvis.tartools.maven-parent.jdx>
 		<!-- ‣ dependency management for Maven plugins -->
 		<!-- for many -->
@@ -105,13 +105,13 @@
 		<maven.war.version>3.4.0</maven.war.version>
 		<!-- ‣ dependency management -->
 		<!-- ‣ release management -->
-		<project.build.outputTimestamp>2024-05-09T16:49:08Z</project.build.outputTimestamp>
+		<project.build.outputTimestamp>2024-05-10T17:07:45Z</project.build.outputTimestamp>
 	</properties>
 	<scm>
 		<connection>scm:git:https://evolvis.org/anonscm/git/tartools/mvnparent.git</connection>
 		<developerConnection>scm:git:ssh://maven@evolvis.org/scmrepos/git/tartools/mvnparent.git</developerConnection>
 		<url>https://evolvis.org/plugins/scmgit/cgi-bin/gitweb.cgi?p=tartools/mvnparent.git</url>
-		<tag>HEAD</tag>
+		<tag>mvnparent-3.1</tag>
 	</scm>
 	<profiles>
 		<profile>
