--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -858,12 +858,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>${argLine} -Dfile.encoding=${project.build.sourceEncoding}</argLine>
-					<systemProperties>
-						<property>
-							<name>java.util.logging.config.file</name>
-							<value>src/test/resources/logging.properties</value>
-						</property>
-					</systemProperties>
+					<systemPropertyVariables>
+						<java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 		</plugins>
